pull everything to new branch

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,10 @@
 [versions]
+androidxActivityKtx = "1.9.0"
+diglolCrypto="0.1.5"
 kotlinxCoroutines= "1.7.3"
+mobileWalletAdapter="2.0.2"
+mockitoInline = "5.2.0"
+mockitoKotlin = "4.1.0"
 
 # Plugin versions
 androidGradlePlugin = "8.0.2"
@@ -8,16 +13,23 @@ kotlinSerialization = "1.6.2"
 vanniktechMavenPublish = "0.25.3"
 
 [libraries]
-crypto = { group = "com.diglol.crypto", name = "crypto", version = "0.1.5" }
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "androidxActivityKtx" }
+crypto = { group = "com.diglol.crypto", name = "crypto", version.ref = "diglolCrypto" }
+pkc = { group = "com.diglol.crypto", name = "pkc", version.ref = "diglolCrypto" }
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test" }
-kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinSerialization" }
-#kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinSerialization" }
+mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 multimult = { group = "io.github.funkatronics", name = "multimult", version = "0.2.1" }
+mwa-clientlib-ktx = { module = "com.solanamobile:mobile-wallet-adapter-clientlib-ktx", version.ref = "mobileWalletAdapter" }
+mwa-walletlib = { module = "com.solanamobile:mobile-wallet-adapter-walletlib", version.ref = "mobileWalletAdapter" }
 rpc-core = { group = "com.solanamobile", name = "rpc-core", version = "0.2.5" }
 
 [plugins]
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 publish = { id = "com.vanniktech.maven.publish", version.ref = "vanniktechMavenPublish" }
