--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 kotlin.code.style=official
 kotlin.js.compiler=ir
 
+#Android
+android.useAndroidX=true
+
 # Group name and project version, used when publishing. For official releases, the version should be
 # provided to Gradle via '-P version="1.0"'.
 group=com.solanamobile
