--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Kotlin CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'v[0-9].[0-9]+.[0-9]+' ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, develop, 'v[0-9].[0-9]+.[0-9]+' ]
   release:
     types: [ published ]
 
