--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Kotlin CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'v[0-9].[0-9]+.[0-9]+' ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, develop, 'v[0-9].[0-9]+.[0-9]+' ]
   release:
     types: [ published ]
 
@@ -20,9 +20,9 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
 
       - name: Configure JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
           cache: gradle
 
@@ -49,9 +49,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
           cache: gradle
 
