--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Kotlin CI
 
 on:
   push:
-    branches: [ main, 'v[0-9].[0-9]+.[0-9]+' ]
+    branches: [ main ]
   pull_request:
     branches: [ main, develop, 'v[0-9].[0-9]+.[0-9]+' ]
   release:
