--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           solana_version: ${{ matrix.solana }}
 
+      - name: Start local validator using Amman
+        run: solana-test-validator
+
       # Build
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
