--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           solana_version: ${{ matrix.solana }}
 
       - name: Start local validator
-        run: solana-test-validator
+        run: solana-test-validator > /dev/null 2>&1 &
 
       # Build
       - name: Grant execute permission for gradlew
