Add Solana System Programs (#22)
* add System Program

* add Memo program + cleanup

* add missing JvmStatic annotation

* fix memo program

* add tests

* add validator to ci

* add transaction confirmation

* start the validator on CI

* edit name

* run validator in bg

* stop validator after test

* check

* remove stop step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   build:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        solana: ["1.18.14"]
 
     steps:
       - name: Checkout
@@ -26,11 +29,19 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+      - name: Install Solana
+        uses: ./.github/actions/install-solana
+        with:
+          solana_version: ${{ matrix.solana }}
+
+      - name: Start local validator
+        run: solana-test-validator > /dev/null 2>&1 &
+
       # Build
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Test
-        run: ./gradlew build
+        run: ./gradlew build -PlocalValidator=true
 
       - name: Save Test Reports
         if: failure()
