--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,10 @@
 kotlin.code.style=official
 kotlin.js.compiler=ir
 
+#MPP
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
+
 # Group name and project version, used when publishing. For official releases, the version should be
 # provided to Gradle via '-P version="1.0"'.
 group=com.solanamobile
