use Koltin 2.20.0-Beta1

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ rpcCore = "0.2.7"
 
 # Plugin versions
 androidGradlePlugin = "8.0.2"
-kotlin = "2.0.0"
+kotlin = "2.0.20-Beta1"
 kotlinSerialization = "1.6.2"
 vanniktechMavenPublish = "0.25.3"
 
