--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Test
-        run: |
-          ./gradlew :core:dependencyInsight --configuration iosArm64CompileClasspath --dependency com.solanamobile
-          ./gradlew build -PlocalValidator=true
+        run: ./gradlew build -PlocalValidator=true -Xklib-duplicated-unique-name-strategy=allow-all-with-warning
 
       - name: Save Test Reports
         if: failure()
