--- a/.github/actions/install-solana/action.yml
+++ b/.github/actions/install-solana/action.yml
@@ -1,4 +1,5 @@
-name: Install Solana
+name: Install Solana Validator
+description: Install a local solana validator for testing
 
 inputs:
   solana_version:
@@ -11,7 +12,7 @@ runs:
     - name: Cache Solana Install
       if: ${{ !env.ACT }}
       id: cache-solana-install
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: "$HOME/.local/share/solana/install/releases/${{ inputs.solana_version }}"
         key: ${{ runner.os }}-Solana-v${{ inputs.solana_version  }}
@@ -19,7 +20,7 @@ runs:
     - name: Install Solana
       if: ${{ !env.ACT }} && steps.cache-solana-install.cache-hit != 'true'
       run: |
-        sh -c "$(curl -sSfL https://release.solana.com/v${{ inputs.solana_version }}/install)"
+        sh -c "$(curl -sSfL https://release.anza.xyz.com/v${{ inputs.solana_version }}/install)"
       shell: bash
 
     - name: Set Active Solana Version
