--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ group=com.solanamobile
 artifactIdPrefix=web3
 version=main-SNAPSHOT
 
-SONATYPE_HOST=S01
+SONATYPE_HOST=CENTRAL_PORTAL
 RELEASE_SIGNING_ENABLED=true
 
 SONATYPE_AUTOMATIC_RELEASE=true
