--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 kotlin.code.style=official
-kotlin.js.compiler=ir
+
+#Android
+android.useAndroidX=true
 
 # Group name and project version, used when publishing. For official releases, the version should be
 # provided to Gradle via '-P version="1.0"'.
@@ -7,7 +9,7 @@ group=com.solanamobile
 artifactIdPrefix=web3
 version=main-SNAPSHOT
 
-SONATYPE_HOST=S01
+SONATYPE_HOST=CENTRAL_PORTAL
 RELEASE_SIGNING_ENABLED=true
 
 SONATYPE_AUTOMATIC_RELEASE=true
